geth_and_k8s/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: web
    env: staging
    app:
    runtime-component: web
spec:
  selector:
    name: web
    env: staging
    app:
  ports:
  - name: http
    port: 80
    targetPort: 8545
